Fix newletters subscribe button and yellow carrousel on mobile

--- a/src/assets/scss/components/_main.scss
+++ b/src/assets/scss/components/_main.scss
@@ -140,6 +140,10 @@
     margin-bottom: 1rem;
 }
 
+.aetm--methods--box {
+    margin: 0 -2rem;
+}
+
 .aetm--methods {
     border: 1px solid $aetm-gold;
     padding: 2rem 1rem;
@@ -266,6 +270,18 @@
 
     .input-group {
         margin-bottom: 0;
+
+        @include breakpoint(small only) {
+            display: block;
+
+            .input-group-button {
+                display: block;
+
+                & > input {
+                    width: 100%;
+                }
+            }
+        }
     }
 }
 
